# emploi_temps_cicd

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  ARCHITECTURE_DIAGRAMS.md  BUILD_README.md  CICD_PIPELINE.md  CI_FIXES.md  CORRECTIONS_FINALES.md  COVERAGE_REPORT.md  DOCUMENTATION_CICD_COMPLETE.md  Dockerfile  FINAL_SUCCESS_REPORT.md  GUIDE_UTILISATION.md  Makefile  NOUVELLES_FONCTIONNALITES.md  PROJET_RESUME.md  Prompt_Defis_13&5.txt  PromptsDefis5.odt  README.md  README_CICD.md  README_EXTENDED.md  REORGANISATION_COMPLETE.md  TECHNICAL_UPDATE.md  WigorViewer.spec  build.bat  build_exe.py  demo_final_extraction.py  demo_fixed_days.py  demo_jours.py  dev.ps1  docker-compose.yml  entrypoint.sh  pre-commit.sh  pyproject.toml  pytest-regression.ini  pytest-report.xml  pytest-units.ini  pytest.ini  requirements-dev.txt  (+16 more)
.github/workflows/: ci.yml  nightly.yml
auth/: __init__.py  cookies_auth.py
fixtures/: sample_timetable.html
old_tests/: test_clean_days.py  test_error_503.py  test_parser_jours.py  test_simplified_parser.py
scripts/: build_exe.sh  test_image.sh
src/: __init__.py  cli.py  gui.py  main.py  timetable_parser.py  wigor_api.py
tests/: __init__.py  test_boost_coverage.py  test_functional.py  test_parser.py  test_regression.py
tests/fixtures/: sample_timetable.html
tests/snapshots/: test_regression_sample.json
